--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -1,13 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.makeramen.roundedimageview.RoundedImageView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/pic"
-    android:layout_width="match_parent"
-    android:adjustViewBounds="true"
-    app:riv_corner_radius="1dp"
-    android:layout_margin="2dp"
-    android:layout_height="wrap_content">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:padding="2dp">
 
+    <com.makeramen.roundedimageview.RoundedImageView xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/pic"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="2dp"
+        android:layout_marginTop="-1dp"
+        android:adjustViewBounds="true"
+        android:src="@drawable/example1"
+        app:riv_corner_radius="1dp">
 
-</com.makeramen.roundedimageview.RoundedImageView>
+    </com.makeramen.roundedimageview.RoundedImageView>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/pic"
+        android:layout_marginLeft="4dp"
+        android:layout_marginTop="-3dp"
+        android:text="подпись"
+        android:textSize="15sp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/pic"
+        android:layout_alignParentRight="true"
+        android:layout_marginTop="-16dp"
+        android:layout_marginRight="4dp"
+        android:text="..."
+        android:textSize="25sp" />
+
+</RelativeLayout>
