--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,38 +4,38 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:gravity="center">
+    android:gravity="center"
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/a"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp"
         android:text="Pixateka!"
-        android:textSize="20sp"
-        />
+        android:textSize="20sp" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:layout_below="@+id/a"
         android:id="@+id/list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:layout_below="@+id/a" />
 
-    <ImageView
+    <FrameLayout
+
+        android:visibility="gone"
         android:id="@+id/fragment"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:src="@drawable/example1"
-        android:visibility="gone"/>
+        android:layout_height="match_parent"/>
+
     <Button
         android:id="@+id/refresh_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="refresh"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginRight="4dp"/>
+        android:layout_marginRight="4dp"
+        android:text="refresh" />
 
 </RelativeLayout>
