--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center_horizontal"
-    android:orientation="vertical"
->
+    android:orientation="vertical">
 
     <TextView
         android:layout_width="wrap_content"
@@ -15,16 +16,90 @@
         android:textColor="@color/black"
         android:textSize="19sp" />
 
-    <FrameLayout
-        android:layout_centerInParent="true"
-        android:paddingRight="20dp"
-        android:paddingLeft="20dp"
-        android:id="@+id/registration"
+
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/linear_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:gravity="center_horizontal"
+        android:orientation="vertical"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp">
+
+        <ru.senya.pixateka.view.InputField
+            android:id="@+id/input_email"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:inputType="textEmailAddress"
+            app:hint="Адрес электронной почты"
+            app:hint_color="@color/hint_color"
+            app:src="@drawable/pfp"
+            app:title="Email address" />
+
+        <ru.senya.pixateka.view.InputField
+            android:id="@+id/input_password"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="textPassword"
+            app:hint="Пароль"
+            app:hint_color="@color/hint_color"
+            app:src="@drawable/password"
+            app:title="Password" />
+
+        <ru.senya.pixateka.view.InputField
+            android:id="@+id/input_repeat_password"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="textPassword"
+            app:hint="Подтвердите пароль"
+            app:hint_color="@color/hint_color"
+            app:src="@drawable/password"
+            app:title="Repeat password" />
+
+        <CheckBox
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Принимаю условия пользовательского соглашения"
+            android:textAlignment="textStart" />
+
+        <!--<ru.senya.pixateka.view.InputField
+            android:id="@+id/inputNickname"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="text"
+            app:hint="nAmE"
+            app:hint_color="@color/hint_color"
+            app:title="Nickname" /> -->
+        <Button
+            android:id="@+id/button"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:backgroundTint="@color/button"
+            android:text="Войти"
+            android:textColor="@color/white" />
 
 
+        <TextView
+            android:id="@+id/switcher"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="У меня уже есть аккаунт" />
 
+
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/wrong"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/linear_layout"
+        android:layout_centerHorizontal="true"
+        android:text="Что-то неверно!"
+        android:textColor="@color/red"
+        android:visibility="gone"
+        tools:visibility="visible" />
 
 
 </RelativeLayout>
