--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -5,6 +5,10 @@
         android:id="@+id/navigation_home"
         android:icon="@drawable/home"
         android:title="@string/title_home" />
+    <item
+        android:id="@+id/search"
+        android:icon="@drawable/user"
+        android:title="Search" />
 
     <item
         android:id="@+id/navigation_add"
