--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,30 @@
 
 
     <FrameLayout
-        android:id="@+id/shit"
+        android:id="@+id/navigation_main"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/nav_view" />
+
+    <FrameLayout
+        android:id="@+id/navigation_search"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/nav_view" />
+
+    <FrameLayout
+        android:id="@+id/navigation_add"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/nav_view" />
+
+    <FrameLayout
+        android:id="@+id/navigation_notifications"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/nav_view" />
+    <FrameLayout
+        android:id="@+id/navigation_profile"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@+id/nav_view" />
