--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -7,7 +7,7 @@
         android:title="@string/title_home" />
     <item
         android:id="@+id/search"
-        android:icon="@drawable/user"
+        android:icon="@drawable/search"
         android:title="Search" />
 
     <item
