--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,4 +16,5 @@
     <color name="text_color2">#A4212529</color>
     <color name="button">#212529</color>
     <color name="orange">#FF5722</color>
+    <color name="yellow">#FFB600</color>
 </resources>
