--- a/app/src/main/res/layout/new_fragment_profile.xml
+++ b/app/src/main/res/layout/new_fragment_profile.xml
@@ -8,140 +8,155 @@
 
 
     <RelativeLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <ru.senya.pixateka.view.viewFullscreen
-            android:id="@+id/fragment"
+        <FrameLayout
+            android:id="@+id/fragment_edit"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:visibility="gone" />
 
         <RelativeLayout
-            android:id="@+id/relative"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:id="@+id/relative_layout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            tools:visibility="gone">
 
-            <FrameLayout
-                android:id="@+id/backround_frame"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
-
-                <ImageView
-                    android:id="@+id/back"
-                    android:layout_width="match_parent"
-                    android:layout_height="200dp"
-                    android:scaleType="centerCrop"
-                    tools:src="@drawable/example1" />
-
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="200dp"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/shape" />
-            </FrameLayout>
-
-            <androidx.cardview.widget.CardView
-                android:layout_width="156dp"
-                android:layout_height="156dp"
-                android:layout_below="@id/backround_frame"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="-123dp"
-                android:elevation="12dp"
-                app:cardCornerRadius="80dp">
-
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:src="@color/white" />
-
-
-            </androidx.cardview.widget.CardView>
-
-            <androidx.cardview.widget.CardView
-                android:id="@+id/pfp_frame"
-                android:layout_width="150dp"
-                android:layout_height="150dp"
-                android:layout_below="@id/backround_frame"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="-120dp"
-                android:elevation="12dp"
-                app:cardCornerRadius="80dp">
-
-                <ImageView
-                    android:id="@+id/pfp_img"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/pfp" />
-
-
-            </androidx.cardview.widget.CardView>
-
-
-            <LinearLayout
-                android:id="@+id/bio"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/pfp_frame"
-                android:orientation="vertical">
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="1dp"
-                    android:text="Name Surname"
-                    android:textAlignment="center"
-                    android:textColor="@color/text_color"
-                    android:textSize="30sp" />
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="1dp"
-                    android:text="Geo"
-                    android:textAlignment="center"
-                    android:textColor="@color/text_color2"
-                    android:textSize="18sp" />
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="1dp"
-                    android:text="Birthday"
-                    android:textAlignment="center"
-                    android:textColor="@color/text_color2"
-                    android:textSize="18sp" />
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="1dp"
-                    android:text="About"
-                    android:textAlignment="center"
-                    android:textColor="@color/text_color2"
-                    android:textSize="18sp" />
-            </LinearLayout>
-
-            <Button
-                android:id="@+id/button_edit_profile"
-                android:layout_width="220dp"
-                android:layout_height="60dp"
-                android:layout_below="@id/bio"
-                android:layout_centerHorizontal="true"
-                android:autoSizeTextType="uniform"
-                android:backgroundTint="@color/button"
-                android:text="Редактировать профиль"
-                android:textColor="@color/white" />
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/recycler_list"
+            <ru.senya.pixateka.view.viewFullscreen
+                android:id="@+id/fragment"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_below="@+id/button_edit_profile" />
+                android:visibility="gone" />
+
+            <RelativeLayout
+                android:id="@+id/relative"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <FrameLayout
+                    android:id="@+id/backround_frame"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+
+                    <ImageView
+                        android:id="@+id/back"
+                        android:layout_width="match_parent"
+                        android:layout_height="200dp"
+                        android:scaleType="centerCrop"
+                        tools:src="@drawable/example1" />
+
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="200dp"
+                        android:scaleType="centerCrop"
+                        android:src="@drawable/shape" />
+                </FrameLayout>
+
+                <androidx.cardview.widget.CardView
+                    android:layout_width="156dp"
+                    android:layout_height="156dp"
+                    android:layout_below="@id/backround_frame"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginTop="-123dp"
+                    android:elevation="12dp"
+                    app:cardCornerRadius="80dp">
+
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:src="@color/white" />
 
 
+                </androidx.cardview.widget.CardView>
+
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/pfp_frame"
+                    android:layout_width="150dp"
+                    android:layout_height="150dp"
+                    android:layout_below="@id/backround_frame"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginTop="-120dp"
+                    android:elevation="12dp"
+                    app:cardCornerRadius="80dp">
+
+                    <ImageView
+                        android:id="@+id/pfp_img"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:scaleType="centerCrop"
+                        android:src="@drawable/pfp" />
+
+
+                </androidx.cardview.widget.CardView>
+
+
+                <LinearLayout
+                    android:id="@+id/bio"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/pfp_frame"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="1dp"
+                        android:text="Name Surname"
+                        android:textAlignment="center"
+                        android:textColor="@color/text_color"
+                        android:textSize="30sp" />
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="1dp"
+                        android:text="Geo"
+                        android:textAlignment="center"
+                        android:textColor="@color/text_color2"
+                        android:textSize="18sp" />
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="1dp"
+                        android:text="Birthday"
+                        android:textAlignment="center"
+                        android:textColor="@color/text_color2"
+                        android:textSize="18sp" />
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="1dp"
+                        android:text="About"
+                        android:textAlignment="center"
+                        android:textColor="@color/text_color2"
+                        android:textSize="18sp" />
+                </LinearLayout>
+
+                <Button
+                    android:id="@+id/button_edit_profile"
+                    android:layout_width="220dp"
+                    android:layout_height="60dp"
+                    android:layout_below="@id/bio"
+                    android:layout_centerHorizontal="true"
+                    android:autoSizeTextType="uniform"
+                    android:backgroundTint="@color/button"
+                    android:text="Редактировать профиль"
+                    android:textColor="@color/white" />
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/recycler_list"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_below="@+id/button_edit_profile" />
+
+
+            </RelativeLayout>
         </RelativeLayout>
+
+
     </RelativeLayout>
 
 
