--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,39 +9,39 @@
 
 
     <FrameLayout
-        android:layout_below="@+id/bar"
         android:id="@+id/navigation_main"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/nav_view" />
+        android:layout_above="@+id/nav_view"
+        android:layout_below="@+id/bar" />
 
     <FrameLayout
-        android:layout_below="@+id/bar"
-
         android:id="@+id/navigation_search"
+
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/nav_view" />
+        android:layout_above="@+id/nav_view"
+        android:layout_below="@+id/bar" />
 
     <FrameLayout
-        android:layout_below="@+id/bar"
-
         android:id="@+id/navigation_add"
+
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/nav_view" />
+        android:layout_above="@+id/nav_view"
+        android:layout_below="@+id/bar" />
 
     <FrameLayout
-        android:layout_below="@+id/bar"
-
         android:id="@+id/navigation_notifications"
+
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/nav_view" />
+        android:layout_above="@+id/nav_view"
+        android:layout_below="@+id/bar" />
 
     <FrameLayout
 
-    android:id="@+id/navigation_profile"
+        android:id="@+id/navigation_profile"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@+id/nav_view" />
@@ -54,9 +54,6 @@
         android:layout_marginStart="0dp"
         android:layout_marginEnd="0dp"
         android:background="?android:attr/windowBackground"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
         app:menu="@menu/bottom_nav_menu" />
 
 </RelativeLayout>
