--- a/app/src/main/res/layout/new_fragment_profile.xml
+++ b/app/src/main/res/layout/new_fragment_profile.xml
@@ -20,8 +20,7 @@
         <RelativeLayout
             android:id="@+id/relative_layout"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            tools:visibility="gone">
+            android:layout_height="wrap_content">
 
             <ru.senya.pixateka.view.viewFullscreen
                 android:id="@+id/fragment"
