--- a/app/src/main/res/layout/view_item.xml
+++ b/app/src/main/res/layout/view_item.xml
@@ -1,19 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:padding="2dp"
     >
 
-    <com.makeramen.roundedimageview.RoundedImageView xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+    <com.makeramen.roundedimageview.RoundedImageView
+        android:padding="1dp"
         android:id="@+id/pic"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="2dp"
-        android:layout_marginTop="-1dp"
+        android:layout_marginStart="2dp"
+        android:layout_marginTop="2dp"
+        android:layout_marginEnd="2dp"
+        android:layout_marginBottom="2dp"
         android:adjustViewBounds="true"
         android:src="@drawable/example1"
         app:riv_corner_radius="1dp" />
@@ -38,5 +40,15 @@
         android:layout_marginRight="4dp"
         android:text="..."
         android:textSize="25sp" />
+
+    <TextView
+        android:id="@+id/description"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/sets"
+        android:layout_marginLeft="4dp"
+        android:layout_marginTop="-3dp"
+        android:textSize="15sp"
+        tools:text="email" />
 
 </RelativeLayout>
