--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,7 +9,8 @@
     <color name="white">#FFFFFFFF</color>
     <color name="background">#FFFFFFFF</color>
     <color name="hint_color">#65000000</color>
-    <color name="main_color">#1B000000</color>
+    <color name="main_color">#777777</color>
+    <color name="toolbar_color">#AEAEAE</color>
     <color name="red">#FF0000</color>
     <color name="blue">#0d6efd</color>
     <color name="text_color">#212529</color>
