--- a/app/src/main/res/layout/view_item.xml
+++ b/app/src/main/res/layout/view_item.xml
@@ -4,11 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:padding="2dp"
-    >
+    android:padding="2dp">
 
     <com.makeramen.roundedimageview.RoundedImageView
-        android:padding="1dp"
         android:id="@+id/pic"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -17,6 +15,7 @@
         android:layout_marginEnd="2dp"
         android:layout_marginBottom="2dp"
         android:adjustViewBounds="true"
+        android:padding="1dp"
         android:src="@drawable/example1"
         app:riv_corner_radius="1dp" />
 
