--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -3,19 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/item2"
-        android:icon="@android:drawable/ic_menu_call"
-        android:title="asd"
-        app:showAsAction="always"/>
-    <item
-        android:id="@+id/item3"
-        android:icon="@android:drawable/ic_menu_info_details"
-        android:title="asd"
-        app:showAsAction="always"/>
-    <item
-        android:id="@+id/item4"
+        android:id="@+id/download"
         android:icon="@android:drawable/ic_menu_view"
-        android:title="asd"
+        android:title="скачать"
+        app:showAsAction="never"/>
+    <item
+        android:id="@+id/share"
+        android:icon="@android:drawable/ic_menu_view"
+        android:title="поделиться"
         app:showAsAction="never"/>
 
 </menu>
