--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,13 +9,13 @@
     <color name="white">#FFFFFFFF</color>
     <color name="background">#FFFFFFFF</color>
     <color name="hint_color">#65000000</color>
-    <color name="main_color">#777777</color>
-    <color name="toolbar_color">#AEAEAE</color>
+    <color name="main_color">#626e7c</color>
+    <color name="toolbar_color">#7b8e8f</color>
     <color name="red">#FF0000</color>
     <color name="blue">#0d6efd</color>
-    <color name="text_color">#212529</color>
-    <color name="text_color2">#A4212529</color>
-    <color name="button">#212529</color>
+    <color name="text_color">#7b8e8f</color>
+    <color name="text_color2">#FFFFFF</color>
+    <color name="button">#7b8e8f</color>
     <color name="orange">#FF5722</color>
     <color name="yellow">#FFB600</color>
 </resources>
