--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,4 +18,10 @@
     <color name="button">#7b8e8f</color>
     <color name="orange">#FF5722</color>
     <color name="yellow">#FFB600</color>
+
+    <color name="v1">#a8c9e2</color>
+    <color name="v2">#a8ace2</color>
+    <color name="v3">#c4d2a4</color>
+    <color name="v4">#d2b3a4</color>
+    <color name="v5">#a4c4d2</color>
 </resources>
