--- a/app/src/main/res/layout/activity_add.xml
+++ b/app/src/main/res/layout/activity_add.xml
@@ -10,8 +10,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_margin="30dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginEnd="30dp"
+        android:layout_marginBottom="30dp"
         android:adjustViewBounds="true"
+        android:maxHeight="420dp"
         app:riv_corner_radius="5dp"
         tools:src="@drawable/example1" />
 
@@ -21,18 +25,17 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/selected_photo"
         android:orientation="vertical"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp">
+        android:paddingHorizontal="10dp">
 
         <TextView
-            android:visibility="invisible"
             android:id="@+id/wrongName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:text="Имя не должно быть пустое"
             android:textColor="@color/red"
             android:textSize="16sp"
-            android:text="Имя не должно быть пустое" />
+            android:visibility="invisible" />
 
         <ru.senya.pixateka.view.InputField
             android:id="@+id/name"
@@ -60,15 +63,31 @@
 
     </LinearLayout>
 
-    <Button
-        android:id="@+id/button"
-        android:layout_width="220dp"
-        android:layout_height="60dp"
-        android:layout_alignParentBottom="true"
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/linear_layout"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="30dp"
-        android:backgroundTint="@color/button"
-        android:text="Загрузить фото"
-        android:textColor="@color/white" />
+        android:gravity="center"
+        android:orientation="vertical">
+
+        <ProgressBar
+            android:id="@+id/progress_circular"
+            android:layout_width="50dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:visibility="invisible"
+            tools:visibility="visible" />
+
+        <Button
+            android:id="@+id/button"
+            android:layout_width="220dp"
+            android:layout_height="60dp"
+            android:layout_marginBottom="30dp"
+            android:backgroundTint="@color/button"
+            android:text="@string/TextUploadPhoto"
+            android:textColor="@color/white" />
+    </LinearLayout>
+
 
 </RelativeLayout>
