--- a/app/src/main/res/layout/actvity_test.xml
+++ b/app/src/main/res/layout/actvity_test.xml
@@ -1,15 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <TextView
-        android:id="@+id/text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:text="asdfasd"
-        android:textColor="@color/black"
-        android:textSize="18sp" />
+        <VideoView
+            android:id="@+id/main_image"
+            android:layout_width="match_parent"
+            android:layout_height="220dp"
+            android:layout_marginStart="2dp"
+            android:layout_marginTop="2dp"
+            android:layout_marginEnd="2dp"
+            android:layout_marginBottom="2dp"
+            android:adjustViewBounds="true"
+            android:padding="1dp"
+            android:src="@color/v1"
+            app:riv_corner_radius="1dp" />
+
+        <TextView
+            android:id="@+id/image_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/main_image"
+            android:layout_marginLeft="4dp"
+            android:layout_marginTop="-3dp"
+            android:textSize="15sp"
+            tools:text="подпись" />
+
+        <TextView
+            android:id="@+id/sets"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/main_image"
+            android:layout_alignParentEnd="true"
+            android:layout_marginTop="-16dp"
+            android:layout_marginEnd="4dp"
+            android:padding="3dp"
+            android:text="..."
+            android:textSize="25sp" />
+
+        <TextView
+            android:id="@+id/description"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/sets"
+            android:layout_marginLeft="4dp"
+            android:layout_marginTop="-3dp"
+            android:textSize="15sp"
+            tools:text="description" />
 
 </RelativeLayout>
