--- a/app/src/main/res/layout/view_fullscreen.xml
+++ b/app/src/main/res/layout/view_fullscreen.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,20 +8,17 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:background="@color/white"
         android:gravity="center_horizontal"
         android:orientation="vertical">
 
-
-        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
 
 
-            <com.makeramen.roundedimageview.RoundedImageView xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:app="http://schemas.android.com/apk/res-auto"
-                xmlns:tools="http://schemas.android.com/tools"
+            <com.makeramen.roundedimageview.RoundedImageView
                 android:id="@+id/pic"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -42,12 +39,14 @@
                 tools:text="подпись" />
 
             <TextView
+                android:id="@+id/sets"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/pic"
                 android:layout_alignParentRight="true"
                 android:layout_marginTop="-16dp"
                 android:layout_marginRight="4dp"
+                android:padding="10dp"
                 android:text="..."
                 android:textSize="25sp" />
 
@@ -70,8 +69,7 @@
                 android:src="@drawable/pfp" />
         </androidx.cardview.widget.CardView>
 
-
     </LinearLayout>
 
 
-</ScrollView>
+</androidx.core.widget.NestedScrollView>
